// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`frozen actual damage across source × head/body × multipliers × species/variant × distance > bow retains exact amounts and rounding 1`] = `
{
  "balbal-buried/body/100m/plain": 7,
  "balbal-buried/body/100m/sneak": 13,
  "balbal-buried/body/20m/plain": 11,
  "balbal-buried/body/20m/sneak": 22,
  "balbal-buried/body/60m/plain": 9,
  "balbal-buried/body/60m/sneak": 19,
  "balbal-buried/head/100m/plain": 17,
  "balbal-buried/head/100m/sneak": 33,
  "balbal-buried/head/20m/plain": 27,
  "balbal-buried/head/20m/sneak": 55,
  "balbal-buried/head/60m/plain": 23,
  "balbal-buried/head/60m/sneak": 46,
  "balbal-open/body/100m/plain": 16,
  "balbal-open/body/100m/sneak": 33,
  "balbal-open/body/20m/plain": 27,
  "balbal-open/body/20m/sneak": 54,
  "balbal-open/body/60m/plain": 23,
  "balbal-open/body/60m/sneak": 46,
  "balbal-open/head/100m/plain": 41,
  "balbal-open/head/100m/sneak": 83,
  "balbal-open/head/20m/plain": 68,
  "balbal-open/head/20m/sneak": 136,
  "balbal-open/head/60m/plain": 58,
  "balbal-open/head/60m/sneak": 116,
  "balbal-ranged/body/100m/plain": 13,
  "balbal-ranged/body/100m/sneak": 27,
  "balbal-ranged/body/20m/plain": 22,
  "balbal-ranged/body/20m/sneak": 43,
  "balbal-ranged/body/60m/plain": 19,
  "balbal-ranged/body/60m/sneak": 37,
  "balbal-ranged/head/100m/plain": 33,
  "balbal-ranged/head/100m/sneak": 66,
  "balbal-ranged/head/20m/plain": 55,
  "balbal-ranged/head/20m/sneak": 109,
  "balbal-ranged/head/60m/plain": 46,
  "balbal-ranged/head/60m/sneak": 93,
  "crab-front/body/100m/plain": 13,
  "crab-front/body/100m/sneak": 27,
  "crab-front/body/20m/plain": 22,
  "crab-front/body/20m/sneak": 43,
  "crab-front/body/60m/plain": 19,
  "crab-front/body/60m/sneak": 37,
  "crab-front/head/100m/plain": 33,
  "crab-front/head/100m/sneak": 66,
  "crab-front/head/20m/plain": 55,
  "crab-front/head/20m/sneak": 109,
  "crab-front/head/60m/plain": 46,
  "crab-front/head/60m/sneak": 93,
  "ironhide/body/100m/plain": 16,
  "ironhide/body/100m/sneak": 32,
  "ironhide/body/20m/plain": 26,
  "ironhide/body/20m/sneak": 52,
  "ironhide/body/60m/plain": 22,
  "ironhide/body/60m/sneak": 44,
  "ironhide/head/100m/plain": 66,
  "ironhide/head/100m/sneak": 132,
  "ironhide/head/20m/plain": 109,
  "ironhide/head/20m/sneak": 218,
  "ironhide/head/60m/plain": 92,
  "ironhide/head/60m/sneak": 185,
  "plain/body/100m/plain": 26,
  "plain/body/100m/sneak": 53,
  "plain/body/20m/plain": 43,
  "plain/body/20m/sneak": 86,
  "plain/body/60m/plain": 37,
  "plain/body/60m/sneak": 74,
  "plain/head/100m/plain": 66,
  "plain/head/100m/sneak": 132,
  "plain/head/20m/plain": 109,
  "plain/head/20m/sneak": 218,
  "plain/head/60m/plain": 92,
  "plain/head/60m/sneak": 185,
}
`;

exports[`frozen actual damage across source × head/body × multipliers × species/variant × distance > broadhead retains exact amounts and rounding 1`] = `
{
  "balbal-buried/body/100m/plain": 6,
  "balbal-buried/body/20m/plain": 9,
  "balbal-buried/body/60m/plain": 8,
  "balbal-buried/head/100m/plain": 14,
  "balbal-buried/head/20m/plain": 23,
  "balbal-buried/head/60m/plain": 19,
  "balbal-open/body/100m/plain": 14,
  "balbal-open/body/20m/plain": 23,
  "balbal-open/body/60m/plain": 19,
  "balbal-open/head/100m/plain": 34,
  "balbal-open/head/20m/plain": 57,
  "balbal-open/head/60m/plain": 48,
  "balbal-ranged/body/100m/plain": 11,
  "balbal-ranged/body/20m/plain": 18,
  "balbal-ranged/body/60m/plain": 16,
  "balbal-ranged/head/100m/plain": 28,
  "balbal-ranged/head/20m/plain": 46,
  "balbal-ranged/head/60m/plain": 39,
  "crab-front/body/100m/plain": 11,
  "crab-front/body/20m/plain": 18,
  "crab-front/body/60m/plain": 16,
  "crab-front/head/100m/plain": 28,
  "crab-front/head/20m/plain": 46,
  "crab-front/head/60m/plain": 39,
  "ironhide/body/100m/plain": 18,
  "ironhide/body/20m/plain": 30,
  "ironhide/body/60m/plain": 26,
  "ironhide/head/100m/plain": 77,
  "ironhide/head/20m/plain": 127.39999999999999,
  "ironhide/head/60m/plain": 107.8,
  "plain/body/100m/plain": 30.799999999999997,
  "plain/body/20m/plain": 50.4,
  "plain/body/60m/plain": 43.4,
  "plain/head/100m/plain": 77,
  "plain/head/20m/plain": 127.39999999999999,
  "plain/head/60m/plain": 107.8,
}
`;

exports[`frozen actual damage across source × head/body × multipliers × species/variant × distance > golden retains exact amounts and rounding 1`] = `
{
  "balbal-buried/body/100m/plain": 13,
  "balbal-buried/body/100m/sneak": 27,
  "balbal-buried/body/20m/plain": 22,
  "balbal-buried/body/20m/sneak": 43,
  "balbal-buried/body/60m/plain": 19,
  "balbal-buried/body/60m/sneak": 37,
  "balbal-buried/head/100m/plain": 33,
  "balbal-buried/head/100m/sneak": 66,
  "balbal-buried/head/20m/plain": 55,
  "balbal-buried/head/20m/sneak": 109,
  "balbal-buried/head/60m/plain": 46,
  "balbal-buried/head/60m/sneak": 93,
  "balbal-open/body/100m/plain": 33,
  "balbal-open/body/100m/sneak": 66,
  "balbal-open/body/20m/plain": 54,
  "balbal-open/body/20m/sneak": 108,
  "balbal-open/body/60m/plain": 46,
  "balbal-open/body/60m/sneak": 93,
  "balbal-open/head/100m/plain": 83,
  "balbal-open/head/100m/sneak": 165,
  "balbal-open/head/20m/plain": 136,
  "balbal-open/head/20m/sneak": 273,
  "balbal-open/head/60m/plain": 116,
  "balbal-open/head/60m/sneak": 231,
  "balbal-ranged/body/100m/plain": 27,
  "balbal-ranged/body/100m/sneak": 53,
  "balbal-ranged/body/20m/plain": 43,
  "balbal-ranged/body/20m/sneak": 87,
  "balbal-ranged/body/60m/plain": 37,
  "balbal-ranged/body/60m/sneak": 75,
  "balbal-ranged/head/100m/plain": 66,
  "balbal-ranged/head/100m/sneak": 132,
  "balbal-ranged/head/20m/plain": 109,
  "balbal-ranged/head/20m/sneak": 219,
  "balbal-ranged/head/60m/plain": 93,
  "balbal-ranged/head/60m/sneak": 185,
  "crab-front/body/100m/plain": 13,
  "crab-front/body/100m/sneak": 27,
  "crab-front/body/20m/plain": 22,
  "crab-front/body/20m/sneak": 43,
  "crab-front/body/60m/plain": 19,
  "crab-front/body/60m/sneak": 37,
  "crab-front/head/100m/plain": 33,
  "crab-front/head/100m/sneak": 66,
  "crab-front/head/20m/plain": 55,
  "crab-front/head/20m/sneak": 109,
  "crab-front/head/60m/plain": 46,
  "crab-front/head/60m/sneak": 93,
  "ironhide/body/100m/plain": 16,
  "ironhide/body/100m/sneak": 32,
  "ironhide/body/20m/plain": 26,
  "ironhide/body/20m/sneak": 52,
  "ironhide/body/60m/plain": 22,
  "ironhide/body/60m/sneak": 44,
  "ironhide/head/100m/plain": 66,
  "ironhide/head/100m/sneak": 132,
  "ironhide/head/20m/plain": 109,
  "ironhide/head/20m/sneak": 218,
  "ironhide/head/60m/plain": 92,
  "ironhide/head/60m/sneak": 185,
  "plain/body/100m/plain": 26,
  "plain/body/100m/sneak": 53,
  "plain/body/20m/plain": 43,
  "plain/body/20m/sneak": 86,
  "plain/body/60m/plain": 37,
  "plain/body/60m/sneak": 74,
  "plain/head/100m/plain": 66,
  "plain/head/100m/sneak": 132,
  "plain/head/20m/plain": 109,
  "plain/head/20m/sneak": 218,
  "plain/head/60m/plain": 92,
  "plain/head/60m/sneak": 185,
}
`;

exports[`frozen actual damage across source × head/body × multipliers × species/variant × distance > iron retains exact amounts and rounding 1`] = `
{
  "balbal-buried/body/100m/plain": 6,
  "balbal-buried/body/20m/plain": 9,
  "balbal-buried/body/60m/plain": 8,
  "balbal-buried/head/100m/plain": 14,
  "balbal-buried/head/20m/plain": 23,
  "balbal-buried/head/60m/plain": 19,
  "balbal-open/body/100m/plain": 14,
  "balbal-open/body/20m/plain": 23,
  "balbal-open/body/60m/plain": 19,
  "balbal-open/head/100m/plain": 34,
  "balbal-open/head/20m/plain": 57,
  "balbal-open/head/60m/plain": 48,
  "balbal-ranged/body/100m/plain": 11,
  "balbal-ranged/body/20m/plain": 18,
  "balbal-ranged/body/60m/plain": 16,
  "balbal-ranged/head/100m/plain": 28,
  "balbal-ranged/head/20m/plain": 46,
  "balbal-ranged/head/60m/plain": 39,
  "crab-front/body/100m/plain": 11,
  "crab-front/body/20m/plain": 18,
  "crab-front/body/60m/plain": 16,
  "crab-front/head/100m/plain": 28,
  "crab-front/head/20m/plain": 46,
  "crab-front/head/60m/plain": 39,
  "ironhide/body/100m/plain": 13,
  "ironhide/body/20m/plain": 22,
  "ironhide/body/60m/plain": 19,
  "ironhide/head/100m/plain": 55,
  "ironhide/head/20m/plain": 91,
  "ironhide/head/60m/plain": 77,
  "plain/body/100m/plain": 22,
  "plain/body/20m/plain": 36,
  "plain/body/60m/plain": 31,
  "plain/head/100m/plain": 55,
  "plain/head/20m/plain": 91,
  "plain/head/60m/plain": 77,
}
`;

exports[`frozen actual damage across source × head/body × multipliers × species/variant × distance > javelin retains exact amounts and rounding 1`] = `
{
  "balbal-buried/body/100m/plain": 14,
  "balbal-buried/body/100m/sneak": 28,
  "balbal-buried/body/20m/plain": 14,
  "balbal-buried/body/20m/sneak": 28,
  "balbal-buried/body/60m/plain": 14,
  "balbal-buried/body/60m/sneak": 28,
  "balbal-buried/head/100m/plain": 28,
  "balbal-buried/head/100m/sneak": 55,
  "balbal-buried/head/20m/plain": 28,
  "balbal-buried/head/20m/sneak": 55,
  "balbal-buried/head/60m/plain": 28,
  "balbal-buried/head/60m/sneak": 55,
  "balbal-open/body/100m/plain": 34,
  "balbal-open/body/100m/sneak": 69,
  "balbal-open/body/20m/plain": 34,
  "balbal-open/body/20m/sneak": 69,
  "balbal-open/body/60m/plain": 34,
  "balbal-open/body/60m/sneak": 69,
  "balbal-open/head/100m/plain": 69,
  "balbal-open/head/100m/sneak": 138,
  "balbal-open/head/20m/plain": 69,
  "balbal-open/head/20m/sneak": 138,
  "balbal-open/head/60m/plain": 69,
  "balbal-open/head/60m/sneak": 138,
  "balbal-ranged/body/100m/plain": 28,
  "balbal-ranged/body/100m/sneak": 55,
  "balbal-ranged/body/20m/plain": 28,
  "balbal-ranged/body/20m/sneak": 55,
  "balbal-ranged/body/60m/plain": 28,
  "balbal-ranged/body/60m/sneak": 55,
  "balbal-ranged/head/100m/plain": 55,
  "balbal-ranged/head/100m/sneak": 110,
  "balbal-ranged/head/20m/plain": 55,
  "balbal-ranged/head/20m/sneak": 110,
  "balbal-ranged/head/60m/plain": 55,
  "balbal-ranged/head/60m/sneak": 110,
  "crab-front/body/100m/plain": 28,
  "crab-front/body/100m/sneak": 55,
  "crab-front/body/20m/plain": 28,
  "crab-front/body/20m/sneak": 55,
  "crab-front/body/60m/plain": 28,
  "crab-front/body/60m/sneak": 55,
  "crab-front/head/100m/plain": 55,
  "crab-front/head/100m/sneak": 110,
  "crab-front/head/20m/plain": 55,
  "crab-front/head/20m/sneak": 110,
  "crab-front/head/60m/plain": 55,
  "crab-front/head/60m/sneak": 110,
  "ironhide/body/100m/plain": 33,
  "ironhide/body/100m/sneak": 66,
  "ironhide/body/20m/plain": 33,
  "ironhide/body/20m/sneak": 66,
  "ironhide/body/60m/plain": 33,
  "ironhide/body/60m/sneak": 66,
  "ironhide/head/100m/plain": 110,
  "ironhide/head/100m/sneak": 220,
  "ironhide/head/20m/plain": 110,
  "ironhide/head/20m/sneak": 220,
  "ironhide/head/60m/plain": 110,
  "ironhide/head/60m/sneak": 220,
  "plain/body/100m/plain": 55,
  "plain/body/100m/sneak": 110,
  "plain/body/20m/plain": 55,
  "plain/body/20m/sneak": 110,
  "plain/body/60m/plain": 55,
  "plain/body/60m/sneak": 110,
  "plain/head/100m/plain": 110,
  "plain/head/100m/sneak": 220,
  "plain/head/20m/plain": 110,
  "plain/head/20m/sneak": 220,
  "plain/head/60m/plain": 110,
  "plain/head/60m/sneak": 220,
}
`;

exports[`frozen actual damage across source × head/body × multipliers × species/variant × distance > lever retains exact amounts and rounding 1`] = `
{
  "balbal-buried/body/100m/plain": 8,
  "balbal-buried/body/20m/plain": 13,
  "balbal-buried/body/60m/plain": 11,
  "balbal-buried/head/100m/plain": 20,
  "balbal-buried/head/20m/plain": 33,
  "balbal-buried/head/60m/plain": 28,
  "balbal-open/body/100m/plain": 20,
  "balbal-open/body/20m/plain": 33,
  "balbal-open/body/60m/plain": 28,
  "balbal-open/head/100m/plain": 50,
  "balbal-open/head/20m/plain": 83,
  "balbal-open/head/60m/plain": 69,
  "balbal-ranged/body/100m/plain": 16,
  "balbal-ranged/body/20m/plain": 26,
  "balbal-ranged/body/60m/plain": 23,
  "balbal-ranged/head/100m/plain": 40,
  "balbal-ranged/head/20m/plain": 67,
  "balbal-ranged/head/60m/plain": 56,
  "crab-front/body/100m/plain": 16,
  "crab-front/body/20m/plain": 26,
  "crab-front/body/60m/plain": 23,
  "crab-front/head/100m/plain": 40,
  "crab-front/head/20m/plain": 67,
  "crab-front/head/60m/plain": 56,
  "ironhide/body/100m/plain": 19,
  "ironhide/body/20m/plain": 32,
  "ironhide/body/60m/plain": 27,
  "ironhide/head/100m/plain": 79.5,
  "ironhide/head/20m/plain": 133.5,
  "ironhide/head/60m/plain": 111,
  "plain/body/100m/plain": 31.5,
  "plain/body/20m/plain": 52.5,
  "plain/body/60m/plain": 45,
  "plain/head/100m/plain": 79.5,
  "plain/head/20m/plain": 133.5,
  "plain/head/60m/plain": 111,
}
`;

exports[`frozen actual damage across source × head/body × multipliers × species/variant × distance > longbow retains exact amounts and rounding 1`] = `
{
  "balbal-buried/body/100m/plain": 8,
  "balbal-buried/body/100m/sneak": 15,
  "balbal-buried/body/20m/plain": 12,
  "balbal-buried/body/20m/sneak": 24,
  "balbal-buried/body/60m/plain": 11,
  "balbal-buried/body/60m/sneak": 21,
  "balbal-buried/head/100m/plain": 19,
  "balbal-buried/head/100m/sneak": 37,
  "balbal-buried/head/20m/plain": 31,
  "balbal-buried/head/20m/sneak": 62,
  "balbal-buried/head/60m/plain": 26,
  "balbal-buried/head/60m/sneak": 52,
  "balbal-open/body/100m/plain": 19,
  "balbal-open/body/100m/sneak": 37,
  "balbal-open/body/20m/plain": 31,
  "balbal-open/body/20m/sneak": 61,
  "balbal-open/body/60m/plain": 26,
  "balbal-open/body/60m/sneak": 53,
  "balbal-open/head/100m/plain": 46,
  "balbal-open/head/100m/sneak": 93,
  "balbal-open/head/20m/plain": 77,
  "balbal-open/head/20m/sneak": 154,
  "balbal-open/head/60m/plain": 65,
  "balbal-open/head/60m/sneak": 130,
  "balbal-ranged/body/100m/plain": 15,
  "balbal-ranged/body/100m/sneak": 30,
  "balbal-ranged/body/20m/plain": 25,
  "balbal-ranged/body/20m/sneak": 49,
  "balbal-ranged/body/60m/plain": 21,
  "balbal-ranged/body/60m/sneak": 42,
  "balbal-ranged/head/100m/plain": 37,
  "balbal-ranged/head/100m/sneak": 75,
  "balbal-ranged/head/20m/plain": 62,
  "balbal-ranged/head/20m/sneak": 123,
  "balbal-ranged/head/60m/plain": 52,
  "balbal-ranged/head/60m/sneak": 104,
  "crab-front/body/100m/plain": 15,
  "crab-front/body/100m/sneak": 30,
  "crab-front/body/20m/plain": 25,
  "crab-front/body/20m/sneak": 49,
  "crab-front/body/60m/plain": 21,
  "crab-front/body/60m/sneak": 42,
  "crab-front/head/100m/plain": 37,
  "crab-front/head/100m/sneak": 75,
  "crab-front/head/20m/plain": 62,
  "crab-front/head/20m/sneak": 123,
  "crab-front/head/60m/plain": 52,
  "crab-front/head/60m/sneak": 104,
  "ironhide/body/100m/plain": 18,
  "ironhide/body/100m/sneak": 35,
  "ironhide/body/20m/plain": 29,
  "ironhide/body/20m/sneak": 58,
  "ironhide/body/60m/plain": 25,
  "ironhide/body/60m/sneak": 50,
  "ironhide/head/100m/plain": 74,
  "ironhide/head/100m/sneak": 149,
  "ironhide/head/20m/plain": 123,
  "ironhide/head/20m/sneak": 246,
  "ironhide/head/60m/plain": 104,
  "ironhide/head/60m/sneak": 208,
  "plain/body/100m/plain": 30,
  "plain/body/100m/sneak": 59,
  "plain/body/20m/plain": 49,
  "plain/body/20m/sneak": 97,
  "plain/body/60m/plain": 42,
  "plain/body/60m/sneak": 84,
  "plain/head/100m/plain": 74,
  "plain/head/100m/sneak": 149,
  "plain/head/20m/plain": 123,
  "plain/head/20m/sneak": 246,
  "plain/head/60m/plain": 104,
  "plain/head/60m/sneak": 208,
}
`;

exports[`frozen actual damage across source × head/body × multipliers × species/variant × distance > pierce retains exact amounts and rounding 1`] = `
{
  "balbal-buried/body/100m/plain": 28,
  "balbal-buried/body/20m/plain": 28,
  "balbal-buried/body/60m/plain": 28,
  "balbal-buried/head/100m/plain": 28,
  "balbal-buried/head/20m/plain": 28,
  "balbal-buried/head/60m/plain": 28,
  "balbal-open/body/100m/plain": 69,
  "balbal-open/body/20m/plain": 69,
  "balbal-open/body/60m/plain": 69,
  "balbal-open/head/100m/plain": 69,
  "balbal-open/head/20m/plain": 69,
  "balbal-open/head/60m/plain": 69,
  "balbal-ranged/body/100m/plain": 56,
  "balbal-ranged/body/20m/plain": 56,
  "balbal-ranged/body/60m/plain": 56,
  "balbal-ranged/head/100m/plain": 56,
  "balbal-ranged/head/20m/plain": 56,
  "balbal-ranged/head/60m/plain": 56,
  "crab-front/body/100m/plain": 19,
  "crab-front/body/20m/plain": 19,
  "crab-front/body/60m/plain": 19,
  "crab-front/head/100m/plain": 19,
  "crab-front/head/20m/plain": 19,
  "crab-front/head/60m/plain": 19,
  "ironhide/body/100m/plain": 22,
  "ironhide/body/20m/plain": 22,
  "ironhide/body/60m/plain": 22,
  "ironhide/head/100m/plain": 37,
  "ironhide/head/20m/plain": 37,
  "ironhide/head/60m/plain": 37,
  "plain/body/100m/plain": 37,
  "plain/body/20m/plain": 37,
  "plain/body/60m/plain": 37,
  "plain/head/100m/plain": 37,
  "plain/head/20m/plain": 37,
  "plain/head/60m/plain": 37,
}
`;

exports[`frozen actual damage across source × head/body × multipliers × species/variant × distance > rifle retains exact amounts and rounding 1`] = `
{
  "balbal-buried/body/100m/plain": 3,
  "balbal-buried/body/20m/plain": 5,
  "balbal-buried/body/60m/plain": 4,
  "balbal-buried/head/100m/plain": 7,
  "balbal-buried/head/20m/plain": 12,
  "balbal-buried/head/60m/plain": 10,
  "balbal-open/body/100m/plain": 7,
  "balbal-open/body/20m/plain": 12,
  "balbal-open/body/60m/plain": 10,
  "balbal-open/head/100m/plain": 18,
  "balbal-open/head/20m/plain": 31,
  "balbal-open/head/60m/plain": 25,
  "balbal-ranged/body/100m/plain": 6,
  "balbal-ranged/body/20m/plain": 10,
  "balbal-ranged/body/60m/plain": 8,
  "balbal-ranged/head/100m/plain": 15,
  "balbal-ranged/head/20m/plain": 24,
  "balbal-ranged/head/60m/plain": 20,
  "crab-front/body/100m/plain": 6,
  "crab-front/body/20m/plain": 10,
  "crab-front/body/60m/plain": 8,
  "crab-front/head/100m/plain": 15,
  "crab-front/head/20m/plain": 24,
  "crab-front/head/60m/plain": 20,
  "ironhide/body/100m/plain": 7,
  "ironhide/body/20m/plain": 12,
  "ironhide/body/60m/plain": 10,
  "ironhide/head/100m/plain": 29.150000000000002,
  "ironhide/head/20m/plain": 48.95,
  "ironhide/head/60m/plain": 40.7,
  "plain/body/100m/plain": 11.55,
  "plain/body/20m/plain": 19.25,
  "plain/body/60m/plain": 16.5,
  "plain/head/100m/plain": 29.150000000000002,
  "plain/head/20m/plain": 48.95,
  "plain/head/60m/plain": 40.7,
}
`;

exports[`frozen actual damage across source × head/body × multipliers × species/variant × distance > sun retains exact amounts and rounding 1`] = `
{
  "balbal-buried/body/100m/plain": 20,
  "balbal-buried/body/100m/sneak": 40,
  "balbal-buried/body/20m/plain": 33,
  "balbal-buried/body/20m/sneak": 65,
  "balbal-buried/body/60m/plain": 28,
  "balbal-buried/body/60m/sneak": 56,
  "balbal-buried/head/100m/plain": 50,
  "balbal-buried/head/100m/sneak": 99,
  "balbal-buried/head/20m/plain": 82,
  "balbal-buried/head/20m/sneak": 164,
  "balbal-buried/head/60m/plain": 69,
  "balbal-buried/head/60m/sneak": 139,
  "balbal-open/body/100m/plain": 49,
  "balbal-open/body/100m/sneak": 99,
  "balbal-open/body/20m/plain": 81,
  "balbal-open/body/20m/sneak": 162,
  "balbal-open/body/60m/plain": 70,
  "balbal-open/body/60m/sneak": 139,
  "balbal-open/head/100m/plain": 124,
  "balbal-open/head/100m/sneak": 248,
  "balbal-open/head/20m/plain": 205,
  "balbal-open/head/20m/sneak": 409,
  "balbal-open/head/60m/plain": 173,
  "balbal-open/head/60m/sneak": 346,
  "balbal-ranged/body/100m/plain": 40,
  "balbal-ranged/body/100m/sneak": 79,
  "balbal-ranged/body/20m/plain": 65,
  "balbal-ranged/body/20m/sneak": 130,
  "balbal-ranged/body/60m/plain": 56,
  "balbal-ranged/body/60m/sneak": 112,
  "balbal-ranged/head/100m/plain": 99,
  "balbal-ranged/head/100m/sneak": 198,
  "balbal-ranged/head/20m/plain": 164,
  "balbal-ranged/head/20m/sneak": 328,
  "balbal-ranged/head/60m/plain": 139,
  "balbal-ranged/head/60m/sneak": 277,
  "crab-front/body/100m/plain": 13,
  "crab-front/body/100m/sneak": 27,
  "crab-front/body/20m/plain": 22,
  "crab-front/body/20m/sneak": 43,
  "crab-front/body/60m/plain": 19,
  "crab-front/body/60m/sneak": 37,
  "crab-front/head/100m/plain": 33,
  "crab-front/head/100m/sneak": 66,
  "crab-front/head/20m/plain": 55,
  "crab-front/head/20m/sneak": 109,
  "crab-front/head/60m/plain": 46,
  "crab-front/head/60m/sneak": 93,
  "ironhide/body/100m/plain": 16,
  "ironhide/body/100m/sneak": 32,
  "ironhide/body/20m/plain": 26,
  "ironhide/body/20m/sneak": 52,
  "ironhide/body/60m/plain": 22,
  "ironhide/body/60m/sneak": 44,
  "ironhide/head/100m/plain": 66,
  "ironhide/head/100m/sneak": 132,
  "ironhide/head/20m/plain": 109,
  "ironhide/head/20m/sneak": 218,
  "ironhide/head/60m/plain": 92,
  "ironhide/head/60m/sneak": 185,
  "plain/body/100m/plain": 26,
  "plain/body/100m/sneak": 53,
  "plain/body/20m/plain": 43,
  "plain/body/20m/sneak": 86,
  "plain/body/60m/plain": 37,
  "plain/body/60m/sneak": 74,
  "plain/head/100m/plain": 66,
  "plain/head/100m/sneak": 132,
  "plain/head/20m/plain": 109,
  "plain/head/20m/sneak": 218,
  "plain/head/60m/plain": 92,
  "plain/head/60m/sneak": 185,
}
`;
